services/etherpad/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: etherpad
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
