services/etherpad/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: etherpad
    type: web
  name: etherpad
  namespace: etherpad
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: etherpad
        type: web
    spec:
      containers:
      - name: etherpad
        image: fhardy/etherpad-lite:latest
        ports:
        - containerPort: 9001
          protocol: TCP
        volumeMounts:
        - mountPath: "/etherpad-lite/node_modules"
          name: etherpad-plugins
        livenessProbe:
          httpGet:
            path: /
            port: 9001
          initialDelaySeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: etherpad-plugins
        persistentVolumeClaim:
          claimName: etherpad-plugins
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: etherpad
    type: web
  namespace: etherpad
spec:
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: etherpad
        type: sql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: etherpad-mysql
          mountPath: /var/lib/mysql
      volumes:
      - name: etherpad-mysql
        persistentVolumeClaim:
          claimName: etherpad-mysql
