services/etherpad/etherpad-deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: etherpad
    type: web
  name: etherpad
  namespace: etherpad
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: etherpad
      type: web
  template:
    metadata:
      labels:
        app: etherpad
        type: web
    spec:
      containers:
      - name: etherpad
        image: fhardy/etherpad-lite:latest
        ports:
        - containerPort: 9001
          protocol: TCP
        volumeMounts:
        - mountPath: "/etherpad-lite/node_modules"
          name: etherpad-plugins
        livenessProbe:
          httpGet:
            path: /
            port: 9001
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 9001
          initialDelaySeconds: 5
          timeoutSeconds: 5
      volumes:
      - name: etherpad-plugins
        persistentVolumeClaim:
          claimName: etherpad-plugins
